eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-application-api-deployment
  labels:
    app: bank-application-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-application-api
  template:
    metadata:
      labels:
        app: bank-application-api
    spec:
      containers:
        - name: bank-application-api
          image: 394841434848.dkr.ecr.eu-north-1.amazonaws.com/bankapplication:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
