eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-application-api-service
spec:
  selector:
    app: bank-application-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
