eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-application-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.bank-application.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-application-api-service
                port:
                  number: 80
  tls:
    - hosts:
      - "api.bank-application.net"
      secretName: bank-application-api-cert
